# spintron-nn-kit

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  AUTONOMOUS_DEPLOYMENT_PACKAGE.md  AUTONOMOUS_SDLC_EXECUTION_REPORT.md  AUTONOMOUS_SDLC_EXECUTION_SUCCESS_REPORT.md  AUTONOMOUS_SDLC_FINAL_EXECUTION_REPORT.md  AUTONOMOUS_SDLC_FINAL_REPORT.json  AUTONOMOUS_SDLC_FINAL_REPORT.md  AUTONOMOUS_SDLC_FINAL_SUMMARY.md  AUTONOMOUS_SDLC_SUCCESS.md  AUTONOMOUS_SDLC_SUCCESS_REPORT.md  CROSSBAR_PERFORMANCE_OPTIMIZATION.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.production  EXAMPLES.md  FINAL_AUTONOMOUS_SDLC_REPORT.json  FINAL_SYSTEM_REPORT.json  FINAL_SYSTEM_VALIDATION_REPORT.json  FINAL_VALIDATION_SUMMARY.md  Makefile  PRODUCTION_DEPLOYMENT_SUMMARY.json  PROJECT_CHARTER.md  README.md  RESEARCH_DISCOVERY_REPORT.md  adaptive_evolution_report.json  autonomous_production_deployment_system.py  autonomous_quality_gates.py  autonomous_quality_gates_final.py  autonomous_quality_report.html  autonomous_quality_report.json  autonomous_research_showcase.py  complete_dependency_free_test.py  comprehensive_autonomous_quality_gates.py  comprehensive_quality_gates.py  comprehensive_quality_gates_report.json  (+40 more)
.devcontainer/: devcontainer.json
autonomous_research_showcase/: EXECUTIVE_SUMMARY.md  autonomous_research_showcase_results.json
benchmarks/: basic_validation.py  performance_benchmark.py  simple_benchmark.py  simple_benchmark_results.json  validation_results.json
deployment-package-b516c422/: package-info.json
deployment-package-b516c422/docker/: .dockerignore  Dockerfile  docker-compose.yml
deployment-package-b516c422/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  network-policy.yaml  rbac.yaml  secrets.yaml  service.yaml
deployment-package-b516c422/monitoring/: grafana-dashboard.json  prometheus.yml
deployment-package-b516c422/scripts/: build.sh  deploy.sh  health-check.sh  rollback.sh
deployment-package-b516c422/security/: pod-security-policy.yaml  security-scan.yaml
deployment/kubernetes/: spintron-deployment.yaml
deployment/production/: deployment_package.py
deployment_package/: MANIFEST.json
deployment_package/app/: pyproject.toml  requirements.txt
deployment_package/app/spintron_nn/: demo.py  quick_scaling_test.py  standalone_robust_test.py  test_generation3.py  test_robust.py
deployment_package/app/spintron_nn/cli/: main.py
deployment_package/app/spintron_nn/converter/: mapping.py
deployment_package/app/spintron_nn/core/: __init__.py  crossbar.py
deployment_package/app/spintron_nn/global/: __init__.py  compliance.py  i18n.py
deployment_package/app/spintron_nn/hardware/: __init__.py  constraints.py  verilog_gen.py
deployment_package/app/spintron_nn/models/: audio.py
deployment_package/app/spintron_nn/reliability/: fault_tolerance.py
deployment_package/app/spintron_nn/research/: __init__.py  algorithms.py  autonomous_optimization.py  benchmarking.py  probabilistic_computing.py  publication.py  publication_metadata.py  quantum_hybrid.py
deployment_package/app/spintron_nn/scaling/: auto_scaler.py  cache_optimization.py  distributed_inference.py  distributed_processing.py
deployment_package/app/spintron_nn/security/: secure_computing.py
deployment_package/app/spintron_nn/training/: __init__.py  qat.py  variation_aware.py
deployment_package/app/spintron_nn/utils/: advanced_logging.py  comprehensive_validation.py  error_handling.py  performance.py  validation.py
deployment_package/config/: development.json  production.json  production.yaml  staging.json
deployment_package/containers/: Dockerfile  docker-compose.yml  kubernetes.yaml
deployment_package/docs/: API.md  DEPLOYMENT.md
deployment_package/monitoring/: health_check.py  monitoring.json
deployment_package/scripts/: final_deployment_validation.py  standalone_validation.py  validate_deployment.py
deployment_package/security/: SECURITY.md  security.json
docs/: ROADMAP.md
docs/adr/: 0000-adr-template.md  0001-mtj-crossbar-architecture.md
docs/deployment/: README.md
docs/testing/: README.md
examples/: basic_usage.py
k8s/: deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  service.yaml
publications/: cover_letter.txt  neuroplasticity_manuscript.tex  publication_summary.json  reviewer_response_template.txt  topological_manuscript.tex
research_output/: autonomous_research_summary_1755811821.json  publication_materials_1755811821.json
scripts/: build.sh  release.sh
spintron_nn/: __init__.py  adaptive_crossbar_optimizer.py  adaptive_evolution.py  adaptive_performance_optimizer.py  advanced_adaptive_framework.py  advanced_security_framework.py  advanced_system_orchestrator.py  autonomous_optimization.py  autonomous_research_executor.py  comprehensive_quality_validator.py  dependency_free_core.py  distributed_scaling.py  enterprise_reliability_framework.py  hyperscale_optimization_engine.py  hyperscale_optimizer.py  production_ready_validator.py  quantum_acceleration.py  quantum_distributed_accelerator.py  robust_error_recovery.py  robust_monitoring.py  security_framework.py  standalone_quality_validator.py
spintron_nn/cli/: __init__.py  main.py
spintron_nn/converter/: __init__.py  graph_optimizer.py  pytorch_parser.py
spintron_nn/core/: crossbar.py  mtj_models.py  sot_physics.py
spintron_nn/global/: advanced_i18n.py  compliance.py  deployment.py
spintron_nn/hardware/: testbench.py
spintron_nn/models/: __init__.py  vision.py
spintron_nn/monitoring/: robust_monitoring.py
spintron_nn/optimization/: adaptive_scaling.py  distributed_training.py
spintron_nn/reliability/: __init__.py
spintron_nn/research/: adaptive_evolutionary_neuroplasticity.py  advanced_materials.py  benchmarking.py  breakthrough_neuromorphic_algorithms.py  validation.py  (+13 more)
tests/: __init__.py  comprehensive_integration_test.py  conftest.py  test_advanced_features.py  test_security_validation.py
validation_reports/: validation_report_production_1755811823.json  validation_report_production_1755812135.json
(+23 files in other folders)
